--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Responsive Layout</title>
+<link rel="stylesheet" href="style.css">
+<style>
 
+
+</style>
+</head>
+<body>
+<h1>Our Menu</h1>
+
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sm-12"><p><span id="title1">Chicken</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis ut lorem sit amet tempus. Suspendisse pharetra interdum nibh, vitae lobortis odio luctus id. Cras elementum aliquet nunc, nec auctor arcu feugiat sit amet. Aliquam vitae velit feugiat, iaculis ante at, pharetra dolor.</p></div>
+  <div class="col-lg-4 col-md-6 col-sm-12"><p><span id="title2">Beef</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis ut lorem sit amet tempus. Suspendisse pharetra interdum nibh, vitae lobortis odio luctus id. Cras elementum aliquet nunc, nec auctor arcu feugiat sit amet. Aliquam vitae velit feugiat, iaculis ante at, pharetra dolor.</p></div>
+  <div class="col-lg-4 col-md-12 col-sm-12"><p><span id="title3">Sushi</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis ut lorem sit amet tempus. Suspendisse pharetra interdum nibh, vitae lobortis odio luctus id. Cras elementum aliquet nunc, nec auctor arcu feugiat sit amet. Aliquam vitae velit feugiat, iaculis ante at, pharetra dolor.</p></div>
+</div>
+
+</body>
+</html>
